<resources>
    <string name="app_name">BITS_News</string>
    <string name="bits_news">BITS NEWS</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="email_id">Email ID</string>
    <string name="login">Login</string>
    <string name="new_reg">Don\'t have an account? Sign Up.</string>
    <string name="google_login">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="save">Save</string>
    <string name="news_feed">News Feed</string>
    <string name="my_posts">My Posts</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="new_post">New Post</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="username">Username</string>
    <string name="developers">Developers</string>
</resources>